--- a/lib/AVL/AVL.props
+++ b/lib/AVL/AVL.props
@@ -9,3 +9,7 @@
 	<ItemDefinitionGroup>
 		<ClCompile>
 			<AdditionalIncludeDirectories>$(IPL)/lib/AVL/src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+		</ClCompile>
+	</ItemDefinitionGroup>
+	<ItemGroup />
+</Project>
