--- a/lib/AVL/AVL.vcxproj
+++ b/lib/AVL/AVL.vcxproj
@@ -34,4 +34,24 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGrou
+  <ItemGroup>
+    <ClInclude Include="src\AVL.h" />
+    <ClInclude Include="src\Video\Config.h" />
+    <ClInclude Include="src\Video\Frame.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ACore\ACore.vcxproj">
+      <Project>{4283e1f3-23a1-409f-96ce-9c8984740455}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\AIL\AIL.vcxproj">
+      <Project>{a09d1519-dc15-45cb-9972-958996280ccf}</Project>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\Video\Config.cpp" />
+    <ClCompile Include="src\Video\Frame.cpp" />
+  </ItemGroup>
+  <PropertyGroup Label="Globals">
+    <ProjectGuid>{830C7521-7800-4877-AC29-686D38DEA25A}</ProjectGuid>
+    <RootNamespace>AVL</RootNamespace>
+    <Key
